// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features/TodoListItem CompletedTask play-test 1`] = `
<li class="list-group-item">
  <div class="form-check form-check-inline">
    <input type="checkbox"
           class="form-check-input"
           checked
    >
    <label class="text-decoration-line-through form-check-label">
      Task 1
    </label>
  </div>
  <button type="button"
          class="btn btn-danger"
          aria-label="Delete"
  >
    Delete
  </button>
</li>
`;

exports[`Features/TodoListItem IncompleteTask play-test 1`] = `
<li class="list-group-item">
  <div class="form-check form-check-inline">
    <input type="checkbox"
           class="form-check-input"
    >
    <label class="form-check-label">
      Task 1
    </label>
  </div>
  <button type="button"
          class="btn btn-secondary"
          aria-label="Edit"
  >
    Edit
  </button>
</li>
`;
